objects/IntegrationSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings and constants for Integration such as Events etc.</description>
    <fields>
        <fullName>EvtCreateContractedPrice__c</fullName>
        <label>Create Contracted Price Event</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EvtCreateSoldTo__c</fullName>
        <label>Create Customer (Sold-to) Event</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EvtCreateTempProduct__c</fullName>
        <label>Create Temp Product Event</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EvtSendSampleWarehouse__c</fullName>
        <description>Send Sample to Warehouse event</description>
        <label>Send Sample to Warehouse Event</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalErpComps__c</fullName>
        <description>Comma-separated list of countries which are using local erp.</description>
        <label>Local ERP Companies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalProductCompanies__c</fullName>
        <description>Comma separated IMCd Companies that manage their products in their local ERP.</description>
        <label>Local Product Companies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Recalculations_Per_Hour__c</fullName>
        <description>The maximum number of Quotes that will get resubmitted for calculation per hour</description>
        <label>Quote Recalculations Per Hour</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SampleRequestIntegrationQueues__c</fullName>
        <description>This field significies a comma-separated list of Queues for which Sample Requests when set to Assigned triggers integration through Talend.</description>
        <label>Sample Request Integration Queues</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stdPricebookId__c</fullName>
        <label>Standard Price Book Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Integration Settings</label>
</CustomObject>